--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -8,12 +8,14 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/image": "^3.8",
         "spatie/laravel-activitylog": "^4.10",
-        "spatie/laravel-medialibrary": "^11.13",
+        "spatie/laravel-medialibrary": "^11",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
